--- a/build.gradle
+++ b/build.gradle
@@ -23,16 +23,16 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 archivesBaseName = "fabric"
-version = "0.0.2"
+version = "0.0.3-SNAPSHOT"
 
 minecraft {
 	refmapName = "net.fabricmc.fabric.refmap.json"
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:18w45a"
-	mappings "net.fabricmc:pomf:18w45a.5"
-	modCompile "net.fabricmc:fabric-loader:18w44a-0.1.0.45"
+	minecraft "com.mojang:minecraft:18w46a"
+	mappings "net.fabricmc:pomf:18w46a.4"
+	modCompile "net.fabricmc:fabric-loader:18w44a-0.1.0.46"
 }
 
 apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/maven.gradle'
