add sprite-related hooks

--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ minecraft {
 
 dependencies {
 	minecraft "com.mojang:minecraft:18w48b"
-	mappings "net.fabricmc:pomf:18w48b.2"
-	modCompile "net.fabricmc:fabric-loader:18w44a-0.1.0.47"
+	mappings "net.fabricmc:pomf:18w48b.4"
+	modCompile "net.fabricmc:fabric-loader:0.1.0.48"
 }
 
 apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/maven.gradle'
