--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ buildscript {
 		jcenter()
 		maven {
 			name = 'Fabric'
-			url = 'http://maven.modmuss50.me/'
+			url = 'http://maven.fabricmc.net/'
 		}
 	}
 	dependencies {
-		classpath "net.fabricmc:fabric-loom:0.0.14-SNAPSHOT"
+		classpath "net.fabricmc:fabric-loom:0.1.0-SNAPSHOT"
 	}
 }
 
@@ -23,7 +23,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 archivesBaseName = "fabric"
-version = "0.1.0-SNAPSHOT"
+version = "0.1.0"
 
 minecraft {
 	refmapName = "net.fabricmc.fabric.refmap.json"
@@ -31,8 +31,8 @@ minecraft {
 
 dependencies {
 	minecraft "com.mojang:minecraft:18w49a"
-	mappings "net.fabricmc:pomf:18w49a.16"
-	modCompile "net.fabricmc:fabric-loader:0.1.0.52"
+	mappings "net.fabricmc:pomf:18w49a.19"
+	modCompile "net.fabricmc:fabric-loader:0.2.0.53"
 }
 
 apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/maven.gradle'
