--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'fabric-events-lifecycle'
 include 'fabric-junk'
 include 'fabric-lib'
 include 'fabric-networking'
+include 'fabric-registry-client'
 include 'fabric-registry-commands'
 include 'fabric-registry-extras'
 include 'fabric-registry-sync'
