--- a/settings.gradle
+++ b/settings.gradle
@@ -5,11 +5,14 @@ include 'fabric-crash-report-info'
 include 'fabric-creative-tabs'
 include 'fabric-events-interaction'
 include 'fabric-events-lifecycle'
-include 'fabric-junk'
 include 'fabric-lib'
+include 'fabric-mining-levels'
 include 'fabric-networking'
+include 'fabric-networking-blockentity'
+include 'fabric-object-builders'
 include 'fabric-registry-client'
 include 'fabric-registry-commands'
 include 'fabric-registry-extras'
 include 'fabric-registry-sync'
+include 'fabric-registry-tags'
 include 'fabric-resource-loader'
