--- a/fabric-mining-levels/build.gradle
+++ b/fabric-mining-levels/build.gradle
@@ -3,5 +3,5 @@ version = "0.1.0"
 
 dependencies {
     compile project(path: ':fabric-lib', configuration: 'dev')
-    compile project(path: ':fabric-registry-tags', configuration: 'dev')
+    compile project(path: ':fabric-tag-hooks', configuration: 'dev')
 }
