rename: -> fabric-item-groups

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,9 +15,9 @@ include 'fabric-commands'
 include 'fabric-containers'
 include 'fabric-content-registries'
 include 'fabric-crash-report-info'
-include 'fabric-creative-tabs'
 include 'fabric-events-interaction'
 include 'fabric-events-lifecycle'
+include 'fabric-item-groups'
 include 'fabric-lib'
 include 'fabric-mining-levels'
 include 'fabric-models'
