--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,12 @@ plugins {
 	id 'idea'
 	id 'maven-publish'
 	id 'fabric-loom' version '0.2.2-SNAPSHOT' apply false
-	id 'com.matthewprenger.cursegradle' version "1.1.2"
+//	id 'com.matthewprenger.cursegradle' version "1.1.2"
 }
 
 def ENV = System.getenv()
 
-def baseVersion = "0.3.0"
+def baseVersion = "0.3.0-pre"
 def mcVersion = "1.14 Pre-Release 5"
 
 allprojects {
@@ -134,23 +134,23 @@ dependencies {
 archivesBaseName = "fabric"
 version = baseVersion + "+" + (ENV.BUILD_NUMBER ? ("build." + ENV.BUILD_NUMBER) : "local")
 
-curseforge {
-	if (project.hasProperty('curse_api_key')){
-		apiKey = project.getProperty('curse_api_key')
-	}
-	project {
-		id = '306612'
-		changelog = 'A changelog can be found at https://github.com/FabricMC/fabric/commits/master'
-		releaseType = 'alpha'
-		addGameVersion '1.14-Snapshot'
-		mainArtifact(jar) {
-			displayName = "[$mcVersion] Fabric API $baseVersion build $ENV.BUILD_NUMBER"
-		}
-	}
-	options{
-		forgeGradleIntegration = false
-	}
-}
+//curseforge {
+//	if (project.hasProperty('curse_api_key')){
+//		apiKey = project.getProperty('curse_api_key')
+//	}
+//	project {
+//		id = '306612'
+//		changelog = 'A changelog can be found at https://github.com/FabricMC/fabric/commits/master'
+//		releaseType = 'alpha'
+//		addGameVersion '1.14-Snapshot'
+//		mainArtifact(jar) {
+//			displayName = "[$mcVersion] Fabric API $baseVersion build $ENV.BUILD_NUMBER"
+//		}
+//	}
+//	options{
+//		forgeGradleIntegration = false
+//	}
+//}
 
 publishing {
 	publications {
