--- a/settings.gradle
+++ b/settings.gradle
@@ -26,5 +26,5 @@ include 'fabric-registry-client'
 include 'fabric-registry-commands'
 include 'fabric-registry-extras'
 include 'fabric-registry-sync'
-include 'fabric-registry-tags'
 include 'fabric-resource-loader'
+include 'fabric-tag-hooks'
