push correct settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,21 +10,21 @@ pluginManagement {
 	}
 }
 
-include 'fabric-client-models'
-include 'fabric-client-textures'
+include 'fabric-client-registries'
+include 'fabric-commands'
 include 'fabric-containers'
+include 'fabric-content-registries'
 include 'fabric-crash-report-info'
 include 'fabric-creative-tabs'
 include 'fabric-events-interaction'
 include 'fabric-events-lifecycle'
 include 'fabric-lib'
 include 'fabric-mining-levels'
+include 'fabric-models'
 include 'fabric-networking'
 include 'fabric-networking-blockentity'
 include 'fabric-object-builders'
-include 'fabric-registry-client'
-include 'fabric-registry-commands'
-include 'fabric-registry-extras'
 include 'fabric-registry-sync'
 include 'fabric-resource-loader'
 include 'fabric-tag-hooks'
+include 'fabric-textures'
