--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,8 @@ pluginManagement {
 	}
 }
 
+rootProject.name = "fabric-api"
+
 include 'fabric-client-registries'
 include 'fabric-commands'
 include 'fabric-containers'
