Loot table manipulation API
Co-authored-by: asie <kontakt@asie.pl>

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'fabric-events-lifecycle'
 include 'fabric-item-groups'
 include 'fabric-lib'
 include 'fabric-keybindings'
+include 'fabric-loot-tables'
 include 'fabric-mining-levels'
 include 'fabric-models'
 include 'fabric-networking'
