--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'eclipse'
 	id 'idea'
 	id 'maven-publish'
-	id 'fabric-loom' version '0.2.2-SNAPSHOT' apply false
+	id 'fabric-loom' version '0.2.3-SNAPSHOT' apply false
 	id 'net.minecrell.licenser' version '0.4.1'	
 //	id 'com.matthewprenger.cursegradle' version "1.1.2"
 }
@@ -39,7 +39,7 @@ allprojects {
 
 	afterEvaluate {
 		artifacts {
-			dev file: file("${project.buildDir}/libs/$archivesBaseName-${version}-dev.jar"), type: "jar", builtBy: remapJar
+			dev file: file("${project.buildDir}/libs/$archivesBaseName-${version}-dev.jar"), type: "jar", builtBy: jar
 		}
 
 		processResources {
@@ -104,11 +104,11 @@ subprojects {
 
 }
 
-task remapMavenJar(type: net.fabricmc.loom.task.RemapJar, dependsOn: remapJar) {
+task remapMavenJar(type: net.fabricmc.loom.task.RemapJarTask, dependsOn: jar) {
 	afterEvaluate {
-		jar = file("${project.buildDir}/libs/${archivesBaseName}-${version}-dev.jar")
-		destination = file("${project.buildDir}/libs/${archivesBaseName}-${version}-maven.jar")
-		nestJar = false
+		input = file("${project.buildDir}/libs/${archivesBaseName}-${version}-dev.jar")
+		output = file("${project.buildDir}/libs/${archivesBaseName}-${version}-maven.jar")
+		addNestedDependencies = false
 	}
 }
 
