--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,20 @@ plugins {
 	id 'maven-publish'
 	id 'fabric-loom' version '0.2.3-SNAPSHOT' apply false
 	id 'net.minecrell.licenser' version '0.4.1'	
+	id "org.ajoberstar.grgit" version "3.1.1"
 //	id 'com.matthewprenger.cursegradle' version "1.1.2"
 }
 
 def ENV = System.getenv()
 
 def baseVersion = "0.3.0-pre"
-def mcVersion = "1.14"
+def mcVersion = "1.14.1 Pre-Release 2"
+def yarnVersion = "+build.2"
+
+def getSubprojectVersion(project, version) {
+	def latestCommit = grgit.log(paths: [project.name], maxCommits: 1).get(0)
+	return version + "+" + latestCommit.id.substring(0, 8)
+}
 
 allprojects {
 	apply plugin: 'maven-publish'
@@ -25,8 +32,8 @@ allprojects {
 
 	dependencies {
 		minecraft "com.mojang:minecraft:$mcVersion"
-		mappings "net.fabricmc:yarn:$mcVersion+build.1"
-		modCompile "net.fabricmc:fabric-loader:0.4.2+build.131"
+		mappings "net.fabricmc:yarn:${mcVersion}${yarnVersion}"
+		modCompile "net.fabricmc:fabric-loader:0.4.6+build.144"
 	}
 
 	configurations {
@@ -56,7 +63,6 @@ allprojects {
 		}
 
 		license {
-			println(rootProject.file('HEADER'))
 			header rootProject.file('HEADER')
 			include '**/*.java'
 		}
