--- a/fabric-item-groups/build.gradle
+++ b/fabric-item-groups/build.gradle
@@ -1,5 +1,5 @@
 archivesBaseName = "fabric-item-groups"
-version = "0.1.0"
+version = getSubprojectVersion(project, "0.1.0")
 
 dependencies {
 	compile project(path: ':fabric-resource-loader', configuration: 'dev')
