--- a/fabric-keybindings/build.gradle
+++ b/fabric-keybindings/build.gradle
@@ -1,5 +1,5 @@
 archivesBaseName = "fabric-keybindings"
-version = "0.1.0"
+version = getSubprojectVersion(project, "0.1.0")
 
 dependencies {
 	compile project(path: ':fabric-lib', configuration: 'dev')
