--- a/fabric-object-builders/build.gradle
+++ b/fabric-object-builders/build.gradle
@@ -1,5 +1,5 @@
 archivesBaseName = "fabric-object-builders"
-version = "0.1.0"
+version = getSubprojectVersion(project, "0.1.0")
 
 dependencies {
     compile project(path: ':fabric-lib', configuration: 'dev')
