--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include 'fabric-networking-v0'
 include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builders-v0'
 include 'fabric-registry-sync-v0'
+include 'fabric-renderer-v0'
 include 'fabric-rendering-v0'
 include 'fabric-resource-loader-v0'
 include 'fabric-tag-extensions-v0'
