--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 def ENV = System.getenv()
 
 def baseVersion = "0.3.0-pre"
-def mcVersion = "1.14.1 Pre-Release 2"
+def mcVersion = "1.14.2 Pre-Release 2"
 def yarnVersion = "+build.2"
 
 def getSubprojectVersion(project, version) {
@@ -140,7 +140,7 @@ publishing {
 					def depNode = depsNode.appendNode("dependency")
 					depNode.appendNode("groupId", it.group)
 					depNode.appendNode("artifactId", it.name)
-				depNode.appendNode("version", it.version)
+					depNode.appendNode("version", it.version)
 					depNode.appendNode("scope", "compile")
 				}
 			}
@@ -173,7 +173,7 @@ dependencies {
 	}
 
 	// workaround linux segfault	
-	compile "org.lwjgl:lwjgl-jemalloc:3.2.1"
+	// compile "org.lwjgl:lwjgl-jemalloc:3.2.1"
 }
 
 version = baseVersion + "+" + (ENV.BUILD_NUMBER ? ("build." + ENV.BUILD_NUMBER) : "local")
