--- a/fabric-item-groups-v0/build.gradle
+++ b/fabric-item-groups-v0/build.gradle
@@ -2,5 +2,6 @@ archivesBaseName = "fabric-item-groups-v0"
 version = getSubprojectVersion(project, "0.1.0")
 
 dependencies {
+	compile project(path: ':fabric-api-base', configuration: 'dev')
 	compile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 }
