--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builders-v0'
 include 'fabric-registry-sync-v0'
 include 'fabric-rendering-v0'
+include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
