[#65] Renderer API + Indigo

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,8 @@ include 'fabric-networking-v0'
 include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builders-v0'
 include 'fabric-registry-sync-v0'
+include 'fabric-renderer-api-v1'
+include 'fabric-renderer-indigo'
 include 'fabric-rendering-v0'
 include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
