Fix 'v' version prefix
I'm really dumb

--- a/fabric-enchantments-v1/build.gradle
+++ b/fabric-enchantments-v1/build.gradle
@@ -1,2 +1,2 @@
 archivesBaseName = "fabric-enchantments-v1"
-version = getSubprojectVersion(project, "v0.1.0")
+version = getSubprojectVersion(project, "0.1.0")
