--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ plugins {
 
 def ENV = System.getenv()
 
-def baseVersion = "0.3.0-pre"
-def mcVersion = "1.14.2 Pre-Release 4"
+def baseVersion = "0.3.0"
+def mcVersion = "1.14.2"
 def yarnVersion = "+build.1"
 
 def getSubprojectVersion(project, version) {
@@ -182,7 +182,7 @@ curseforge {
 	project {
 		id = '306612'
 		changelog = 'A changelog can be found at https://github.com/FabricMC/fabric/commits/master'
-		releaseType = 'alpha'
+		releaseType = 'beta'
 		addGameVersion '1.14-Snapshot'
 		mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")) {
 			displayName = "[$mcVersion] Fabric API $baseVersion build $ENV.BUILD_NUMBER"
