fixed fabric API test module
added build/settings gradle file so module is set up properly

Revert "added build/settings gradle file so module is set up properly"

This reverts commit 242849ef

renamed module to have version, fixed gradle setup

removed oops commit

fixed loop dependency issue

--- a/settings.gradle
+++ b/settings.gradle
@@ -36,3 +36,4 @@ include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
+include 'fabric-testmods-v0'
