--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'fabric-crash-report-info-v1'
 include 'fabric-events-interaction-v0'
 include 'fabric-events-lifecycle-v0'
 include 'fabric-item-groups-v0'
+include 'fabric-item-materials-v0'
 include 'fabric-keybindings-v0'
 include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
