--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,5 @@ include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
+include 'fabric-particles-v1'
+
