changes, with the help of @Prospector

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -7,7 +7,7 @@
     "EdgeLayerMixin",
     "RiversLayerMixin",
     "SetBaseBiomesLayerMixin",
-    "SpawnBiomesMixin",
+    "BiomeSourceMixin",
     "VanillaLayeredBiomeSourceMixin"
   ],
   "injectors": {
