Improve javadocs, rewrite SetBaseBiomesLayer mixin to support better weight mechanic, clean up VanillaLayeredBiomeSource mixin, stop accessing most fields directly

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -3,12 +3,12 @@
   "package": "net.fabricmc.fabric.mixin.biomes",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "HillsLayerMixin",
-    "EdgeLayerMixin",
-    "RiversLayerMixin",
-    "SetBaseBiomesLayerMixin",
-    "BiomeSourceMixin",
-    "VanillaLayeredBiomeSourceMixin"
+    "MixinAddEdgeBiomesLayer",
+    "MixinAddHillsLayer",
+    "MixinAddRiversLayer",
+    "MixinBiomeSource",
+    "MixinSetBaseBiomesLayer",
+    "MixinVanillaLayeredBiomeSource"
   ],
   "injectors": {
     "defaultRequire": 1
