--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ plugins {
 def ENV = System.getenv()
 
 def baseVersion = "0.3.0"
-def mcVersion = "1.14.3-pre2"
-def yarnVersion = "+build.2"
+def mcVersion = "1.14.3"
+def yarnVersion = "+build.1"
 
 def getSubprojectVersion(project, version) {
 	if (grgit == null) {
