--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ rootProject.name = "fabric-api"
 
 include 'fabric-api-base'
 
+include 'fabric-climbable-v1'
 include 'fabric-biomes-v1'
 include 'fabric-blockrenderlayer-v1'e
 include 'fabric-biomes-v1'
