--- a/fabric-containers-v0/build.gradle
+++ b/fabric-containers-v0/build.gradle
@@ -4,4 +4,6 @@ version = getSubprojectVersion(project, "0.1.2")
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
 	compile project(path: ':fabric-networking-v0', configuration: 'dev')
+
+	testmodCompile project(path: ':fabric-commands-v0', configuration: 'dev')
 }
