--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'eclipse'
 	id 'idea'
 	id 'maven-publish'
-	id 'fabric-loom' version '0.2.3-SNAPSHOT' apply false
+	id 'fabric-loom' version '0.2.5-SNAPSHOT' apply false
 	id 'net.minecrell.licenser' version '0.4.1'	
 	id "org.ajoberstar.grgit" version "3.1.1"
 	id 'com.matthewprenger.cursegradle' version "1.1.2"
@@ -55,7 +55,16 @@ allprojects {
 		mavenLocal()
 	}
 
+	jar {
+		classifier = "dev"
+	}
+
 	afterEvaluate {
+		remapJar {
+			input = file("${project.buildDir}/libs/$archivesBaseName-${version}-dev.jar")
+			archiveName = "${archivesBaseName}-${version}.jar"
+		}
+
 		artifacts {
 			dev file: file("${project.buildDir}/libs/$archivesBaseName-${version}-dev.jar"), type: "jar", builtBy: jar
 		}
@@ -104,7 +113,7 @@ subprojects {
 					builtBy remapSourcesJar
 				}
 			}
-		}	
+		}
 
 		repositories {
 			maven {
@@ -124,7 +133,7 @@ subprojects {
 task remapMavenJar(type: net.fabricmc.loom.task.RemapJarTask, dependsOn: jar) {
 	afterEvaluate {
 		input = file("${project.buildDir}/libs/${archivesBaseName}-${version}-dev.jar")
-		output = file("${project.buildDir}/libs/${archivesBaseName}-${version}-maven.jar")
+		archiveName = "${archivesBaseName}-${version}-maven.jar"
 		addNestedDependencies = false
 	}
 }
