--- a/settings.gradle
+++ b/settings.gradle
@@ -38,3 +38,4 @@ include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
+include 'fabric-dimensions-v1'
