--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ def getSubprojectVersion(project, version) {
 	} else {
 		def commitHash = latestCommits.get(0).id
 		def buildGradleHash = DigestUtils.sha256Hex(file("build.gradle").text)
-		return version + "+build." + getOrIncrementBuildNumber(project, commitHash + buildGradleHash)
+		return version + "." + getOrIncrementBuildNumber(project, commitHash + buildGradleHash)
 	}
 }
 
