Only run this task if the github token is present

--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ http {
 
 //A task that backup's the patch numbers json to https://gist.github.com/modmuss50/d60beaf80678bd10524add2920b9736e
 task backupJson(type: HttpTask){
+	onlyIf { project.hasProperty('github_token') }
 	config {
 		request.contentType = 'application/json'
 	}
